--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "arrilot/bitrix-migrations",
+  "name": "e-krivonosov/bitrix-migrations",
   "license": "MIT",
   "description": "Database migrations for Bitrix CMS",
   "keywords": [
@@ -8,11 +8,11 @@
   ],
   "authors": [
     {
-      "name": "Nekrasov Ilya",
-      "email": "nekrasov.ilya90@gmail.com"
+      "name": "Digital Sector",
+      "email": "e.krivonosov90@digital-sector.ru"
     }
   ],
-  "homepage": "https://github.com/Arrilot/bitrix-migrations",
+  "homepage": "https://github.com/e-krivonosov/bitrix-migrations",
   "require": {
     "php": ">=5.5.0",
     "symfony/console": "~2|~3|~4",
